Throughout, replace String.format() with String::formatted().