@@ -51,7 +51,7 @@ import legacy.map.HasMutableKind;
 
 	@Override
 	public String toString() { // TODO: cache?
-		return String.format("UnitTransferable conveying %d unit(s)", payload.size());
+        return "UnitTransferable conveying %d unit(s)".formatted(payload.size());
 	}
 
 	@Override
