@@ -126,8 +126,8 @@ public class WorkerMgmtGUI implements MultiMapGUIDriver, WorkerGUI {
 							.startDriver();
 				} catch (final DriverFailedException except) {
 					JOptionPane.showMessageDialog(null,
-							String.format("Failed to open new window:%n%s", except.getMessage()),
-							"Strategic Primer Worker Management", JOptionPane.ERROR_MESSAGE);
+                            "Failed to open new window:%n%s".formatted(except.getMessage()),
+                            "Strategic Primer Worker Management", JOptionPane.ERROR_MESSAGE);
 					LovelaceLogger.error(except, "Failed to open new window");
 				}
 			});
