@@ -76,9 +76,9 @@ public final class DistanceComparator implements Comparator<Point> {
 		if (dist < 0) {
 			throw new IllegalStateException("Negative distance");
 		} else if (dist == 0) {
-			return String.format(" (at %s)", name);
+            return " (at %s)".formatted(name);
 		} else {
-			return String.format(" (%.1f tiles from %s)", Math.sqrt(dist), name);
+			return " (%.1f tiles from %s)".formatted(Math.sqrt(dist), name);
 		}
 	}
 }
